Added 'Style.css' and modified 'Hello.html'

--- a/hello.html
+++ b/hello.html
@@ -2,8 +2,24 @@
 <html>
     <head>
         <title>My Webpage, BRO!</title>
+        <link rel = "stylesheet" href = "styles.css">
     </head>
     <body>
-        Howdy, y'all! Howdy again! Howdy a third time!
+        <h1>LMAO! This is a lame website.</h1>
+        <h2>It do be lookin' kinda fresh doe</h2>
+        <p>I'm learning how to use HTML!</p>
+        <ul>
+            <li>One!</li>
+            <li>Two!</li>
+            <li>Three!</li>
+        </ul>
+        <img src ="https://blogs-images.forbes.com/olliebarder/files/2016/11/persona5_morgana.jpg" width = "25%">
+        <form>
+            <input type="text" placeholder="How are ya?">
+            <button>Submit</button>
+        </form>
+        <div id = "TestDiv">
+            Brooo we gamin
+        </div>
     </body>
 </html>
